[package]
name = "elyan-note"
version = "0.1.2"
description = "A sleek note-taking desktop app built with Tauri and JavaScript"
authors = ["emrek0ca"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
